--- a/OutsideImportHelper/OutsideImportHelper.csproj
+++ b/OutsideImportHelper/OutsideImportHelper.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{69BC4836-7B1C-44F4-AF72-0F6BA8452BEE}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>OutsideImportHelper</RootNamespace>
-    <AssemblyName>OutsideImportHelper</AssemblyName>
+    <AssemblyName>DicomEdit</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -33,7 +33,7 @@
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <WarningLevel>0</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Costura, Version=5.3.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -231,6 +231,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Linac.cs" />
+    <Compile Include="McLarenLinacs.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
